MDEV-8020: innodb.innodb-mdev-7055 produces valgrind warnings in buildbot

Fixed by reverting incorrect fix of MDEC-7055 (reopened) and removing the
test case (because it now crashes).